# codeblocks_sf

./: .clang-format  .gitignore  .travis.yml  AUTHORS  BUGS  BUILD  COMPILERS  ChangeLog  ChangeLog.xsl  Makefile.am  NEWS  README  README.debian  README.release  TODO  acinclude.m4  appveyor.yml  bootstrap  bundle.sh.in  codeblocks-contrib.metainfo.xml  codeblocks.appdata.xml  codeblocks.fedora.spec.in  codeblocks.pc.in  codeblocks.plist.in  codeblocks.spec.fedora.in  codeblocks.spec.in  configure.ac  configure.in  run_clang_format.bat  run_clang_format.sh  updateChangeLog.sh  updateDocs.sh  update_revision.sh  wiz_default_compiler_fix.patch  wxsmith_add_richtext_controls.patch
src/: ANSI_BUILD_cb-projectfiles.patch  AStyle.dsp  AUTHORS  BUGS  BUILD  ChangeLog  ClassWizard.dsp  CodeBlocks-NewBuild-UNI.cbp  CodeBlocks-NewBuild.cbp  CodeBlocks-unix-wx2.6.0.cbp  CodeBlocks-unix.cbp  CodeBlocks-unix.scintilla.cbp  CodeBlocks-unix.workspace  CodeBlocks-wx2.6.0.cbp  CodeBlocks.cbp  CodeBlocks.dsw  CodeBlocks.scintilla.cbp  CodeBlocks.workspace  CodeBlocks_wx29-unix.cbp  CodeBlocks_wx29-unix.workspace  CodeBlocks_wx29.cbp  CodeBlocks_wx29.workspace  CodeBlocks_wx29_64.cbp  CodeBlocks_wx30-unix.cbp  CodeBlocks_wx30-unix.workspace  CodeBlocks_wx30.cbp  CodeBlocks_wx30.workspace  CodeBlocks_wx30_64.cbp  CodeBlocks_wx30_64.workspace  CodeBlocks_wx31.cbp  CodeBlocks_wx31.workspace  CodeBlocks_wx31_64.cbp  CodeBlocks_wx31_64.workspace  CodeCompletion.dsp  CompilerGCC.dsp  ConsoleRunner.dsp  ContribPlugins-unix.workspace  ContribPlugins.workspace  ContribPlugins_wx29-unix.workspace  ContribPlugins_wx29.workspace  (+60 more)
src/base/: Makefile.am
src/base/exchndl/: exchndl.c  intlimpl.c
src/base/tinyxml/: Makefile.am  tinywxuni.cpp  tinyxml.cpp  tinyxmlparser.cpp
src/build_tools/: Info.plist  Makefile.am
src/build_tools/autorevision/: Makefile.am  autorevision.cpp
src/build_tools/scrooge/: scrooge.cpp
src/i18n/: byogames.pot  cb_koders.pot  codeblocks.pot  codesnippets.pot  codestat.pot  copystrings.pot  coreplugins.pot  devpak_plugin.pot  dragscroll.pot  extract.bash  extract.bat  extract_win.bat  help_plugin.pot  keybinder.pot  profiler.pot  source_exporter.pot  wxsmith.pot
src/include/: Makefile.am  annoyingdialog.h  autodetectcompilers.h  autorevision.h.in  backgroundthread.h  base64.h  blockallocated.h  cbart_provider.h  cbauibook.h  cbcolourmanager.h  cbdebugger_interfaces.h  cbeditor.h  cbeditorprintout.h  cbexception.h  cbexecute.h  cbfunctor.h  cbplugin.h  cbproject.h  cbstatusbar.h  cbstyledtextctrl.h  cbthreadedtask.h  cbthreadpool.h  cbthreadpool_extras.h  cbtool.h  cbtreectrl.h  cbworkspace.h  ccmanager.h  child_pids.h  compileoptionsbase.h  compiler.h  compilercommandgenerator.h  compilerfactory.h  compileroptions.h  compiletargetbase.h  configmanager.h  configurationpanel.h  configuretoolsdlg.h  confirmreplacedlg.h  crc32.h  cygwin.h  (+91 more)
src/include/mozilla_chardet/: CharDistribution.h  JpCntx.h  nsBig5Prober.h  nsCharSetProber.h  nsCodingStateMachine.h  nsEUCJPProber.h  nsEUCKRProber.h  nsEUCTWProber.h  nsError.h  nsEscCharsetProber.h  (+14 more)
src/installer/: codeblocks.chm  setup.nsi
src/mime/: Makefile.am  codeblocks.desktop  codeblocks.xml
src/plugins/: Makefile.am  xtra_res.cpp  xtra_res.h
src/scripts/: ConvertOldToNewScript.script  Makefile.am  edit_startup_script.script  gdb_types.script  gdb_wx.script  make_dist.script  plugin_find_broken_files.script  sample_plugin.script  startup.script  stl-views-1.0.3.gdb  wx_help.script
src/sdk/: Makefile.am  annoyingdialog.cpp  annoyingdialog.h  autodetectcompilers.cpp  autodetectcompilers.h  autorevision.h.in  backgroundthread.h  base64.cpp  base64.h  blockallocated.cpp  blockallocated.h  cbart_provider.cpp  cbauibook.cpp  cbcolourmanager.cpp  cbdebugger_interfaces.cpp  cbeditor.cpp  cbeditor.h  cbeditorprintout.cpp  cbeditorprintout.h  cbexception.cpp  cbexception.h  cbplugin.cpp  cbplugin.h  cbproject.cpp  cbproject.h  cbstatusbar.cpp  cbstyledtextctrl.cpp  cbthreadedtask.h  cbthreadpool.cpp  cbthreadpool.h  cbtool.h  cbtreectrl.cpp  cbworkspace.cpp  cbworkspace.h  ccmanager.cpp  child_pids.cpp  compileoptionsbase.cpp  compileoptionsbase.h  compiler.cpp  compiler.h  (+185 more)
src/setup/: COMPILERS_win32.rtf  CodeBlocks_Core.iss  CodeBlocks_MINGW.iss  Download_BCC55.url  Download_DMC.url  Download_MSVC2003.url  Download_MinGW.url  Download_OW.url  Forums.url  Makefile.am  README.txt  ReportBugs.url  WebSite.url  WiKi.url  codeblocks.exe.manifest  index.ini  setup.nsi
src/src/: Makefile.am  app.cpp  app.h  appglobals.cpp  appglobals.h  associations.cpp  associations.h  aui_compat.h  backtracedlg.cpp  backtracedlg.h  batchbuild.h  breakpointsdlg.cpp  breakpointsdlg.h  cbart_provider.cpp  cbart_provider.h  codeblocks.1  compilersettingsdlg.cpp  compilersettingsdlg.h  cpuregistersdlg.cpp  cpuregistersdlg.h  crashhandler.cpp  crashhandler.h  debugger_interface_creator.cpp  debugger_interface_creator.h  debuggermenu.cpp  debuggermenu.h  debuggersettingscommonpanel.cpp  debuggersettingscommonpanel.h  debuggersettingsdlg.cpp  debuggersettingsdlg.h  debuggersettingspanel.cpp  debuggersettingspanel.h  disassemblydlg.cpp  disassemblydlg.h  dlgabout.cpp  dlgabout.h  dlgaboutplugin.cpp  dlgaboutplugin.h  dlghelpsysteminformation.cpp  dlghelpsysteminformation.h  (+57 more)
src/templates/: Makefile.am  console.cbp  console.template  dll-main.cpp  dll.cbp  dll.template  opengl.cbp  opengl.template  staticlib-sample.c  staticlib.cbp  staticlib.template  win32-main.cpp  win32.cbp  win32gui.template  wx-app-ash.cpp  wx-main-ash.cpp  wx-main-s.cpp  wx-main-sh.h  wxwindows.cbp  wxwindows.template  wxwindows_static.cbp
src/tools/: Makefile.am
src/wxsmith/: BuildTargetPanel.wxs  CCDebugInfo.wxs  CompilerPanel.wxs  EmbeddedHtmlPanel.wxs  FilePathPanel.wxs  GenericSelectPath.wxs  GenericSingleChoiceList.wxs  InfoPanel.wxs  Makefile.am  ProjectPathPanel.wxs  ScriptConsole.wxs  VirtualBuildTargetsDlg.wxs  databreakpointdlg.wxs  debuggersettingscommonpanel.wxs  debuggersettingsdlg.wxs  debuggersettingspanel.wxs  editprojectglobsdlg.wxs  goto_file.wxs  manageglobsdlg.wxs
(+5622 files in other folders)
